--- a/Kandidatnummer_30_mappeoppgave_2_SOK_2030.qmd
+++ b/Kandidatnummer_30_mappeoppgave_2_SOK_2030.qmd
@@ -518,6 +518,8 @@ Må se over dette imorgen lmao for kokt å jobbe med nå.
 
 Hva blir de samfunnsøkonomiske konsekvensene av en fusjon mellom Mack Mikrobrygg 13 og Graff Brygghus.
 
+Blabla noe.
+
 \clearpage
 
 # Referanser
