--- a/dokumentobjekter/texstuff/references_sok-2030.bib
+++ b/dokumentobjekter/texstuff/references_sok-2030.bib
@@ -9,3 +9,11 @@
 	year = {2014},
 	keywords = {Industrial organization},
 }
+
+
+@article{michalsen_naeringsokonomi_nodate,
+	title = {Næringsøkonomi og konkurransestrategi},
+	language = {no},
+	author = {Michalsen, Anita},
+	file = {Michalsen - Næringsøkonomi og konkurransestrategi.pdf:C\:\\Users\\danie\\Zotero\\storage\\XPPZRYPU\\Michalsen - Næringsøkonomi og konkurransestrategi.pdf:application/pdf},
+}
