--- a/dokumentobjekter/texstuff/forsidesok2030.tex
+++ b/dokumentobjekter/texstuff/forsidesok2030.tex
@@ -8,10 +8,10 @@
     \vspace*{0.5cm}
     \hspace*{2.5cm}{\color{black}\fontsize{11}{13.2}\selectfont Handelshøgskolen ved UiT \\[0.2em]
     \hspace*{2.5cm}\color{black}\fontsize{8}{13.2}\selectfont Fakultet for biovitenskap, fiskeri og økonomi \\[0.2em]
-    \hspace*{2.5cm}\large{\color{black}\textbf{Obligatorisk oppgave}}  \\[0.5em]
-    \hspace*{2.5cm}\color{black}\fontsize{12}{14.4}\selectfont Eksperimentell metode \\[0.5em]
-\hspace*{2.5cm}\color{black}\fontsize{11}{13.2}\selectfont Daniel Johannessen og Daniel Groth \\[0.5em]
-    \hspace*{2.5cm}\color{black}\fontsize{11}{13.2}\selectfont Sok-2012, Vår 2024 \\[0.5em]
+    \hspace*{2.5cm}\large{\color{black}\textbf{Mappeoppgave 1}}  \\[0.5em]
+    \hspace*{2.5cm}\color{black}\fontsize{12}{14.4}\selectfont Clarion Hotel The Edge prisstrategi \\[0.5em]
+\hspace*{2.5cm}\color{black}\fontsize{11}{13.2}\selectfont Kandidatnummer: 18 30 9 \\[0.5em]
+    \hspace*{2.5cm}\color{black}\fontsize{11}{13.2}\selectfont Sok-2030, Vår 2024 \\[0.5em]
     \hspace*{2.0cm}
     \par}
 \end{flushleft} 
@@ -24,5 +24,6 @@
 
 
 \newgeometry{left=20mm, right=20mm, top=20mm, bottom=20mm}
+
 
 
